update lein profiles with some jvm 12 args